--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+/src/main/resources/words_alpha.txt
 
 ### STS ###
 .apt_generated
