--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ build/
 
 ### VS Code ###
 .vscode/
+/src/main/resources/langdetect-183.bin
+/src/main/resources/en-sent.bin
+/src/main/resources/en-pos-maxent.bin
+/src/main/resources/langdetect-183.bin
